[package]
name = "cricket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = { version = "4.5.28", features = ["derive"] }
data-encoding = "2.7.0"
ed25519-dalek = "2.1.1"
futures-lite = "2.6.0"
indicatif = "0.17.11"
iroh = {version="0.32.0", features= ["discovery-pkarr-dht", "test-utils"]}
iroh-base = {version="0.32.0", features=["key", "relay"]}
iroh-gossip = "0.32.0"
n0-future = "0.1.2"
parse-size = "1.1.0"
pkarr = "2.3.1"
postcard = "1.1.1"
rand = "0.8"
rand_core = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"


config = {path = "lib/config"}
node = {path = "lib/node"}
event_handler = {path = "lib/event_handler"}

hex = "0.4.3"
log = "0.4.25"
env_logger = "0.11.6"
