[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
ed25519 = "2.2.3"
hex = "0.4.3"
iroh = "0.32.1"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sled = "0.34.7"
tempfile = "3.17.1"
log = "0.4.25"
