
[package]
name = "event_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
eventsys = "0.1.1"
futures = "0.3.31"
iroh = "0.32.1"
log = "0.4.25"
once_cell = "1.20.3"
quinn = "0.11.6"
rmpv = "1.3.0"
serde = "1.0.217"
serde_json = "1.0.138"
socketioxide = "0.16.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

config = {path = "../../lib/config"}
