[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
config = {path = "../config"}
event_handler = {path = "../event_handler"}

eventsys = "0.1.1"
hex = "0.4.3"
iroh = "0.32.1"
n0-future = "0.1.2"
pkarr = "2.3.1"
rand = "0.8.0" # needed for iroh
serde = "1.0.217"
serde_json = "1.0.138"
tokio = "1.43.0"
tracing = "0.1.41"
log = "0.4.25"
